tests/res/match/error_empty.say
// A match with no arms is a parse error.
say x = 1;
match x { } // error: A `match` needs at least one arm
